Closed Bug 1617858 Opened 5 years ago Closed 5 years ago

[Linux] White vertical bar in native-styled select dropdown widget, on Ubuntu 19.10

Categories

(Core :: Widget: Gtk, defect)

Desktop
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla75
Tracking Status
firefox73 --- wontfix
firefox74 + verified
firefox75 --- verified

People

(Reporter: stransky, Assigned: stransky)

References

Details

Attachments

(1 file)

With Bug 1613130 fixed we may not need a fallback widget so let's remove this workaround.

See Also: → 1614421
Pushed by apavel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b5783f1f17d8 [Linux/Gtk] Don't use a fallback widget when it's missing, r=jhorak
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75

Tracking for 74 as we want to uplift it in our last beta.

Comment on attachment 9128767 [details]
Bug 1617858 [Linux/Gtk] Don't use a fallback widget when it's missing, r?jhorak

Beta/Release Uplift Approval Request

  • User impact if declined: White line at dropbox / Yaru Gtk theme.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: 0) use Ubuntu with Yaru theme
  1. load url:
    data:text/html,<select>
  2. check there isn't any thin white or black line there
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): linux theme fix
  • String changes made/needed: none
Attachment #9128767 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Worked for me!

Thanks!

QA Whiteboard: [qa-triaged]

Comment on attachment 9128767 [details]
Bug 1617858 [Linux/Gtk] Don't use a fallback widget when it's missing, r?jhorak

Linux theme fix, uplift approved for 74 beta 9, thanks.

Attachment #9128767 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

I have reproduced this issue on Beta v74.0b8 and verified it in Beta v74.0b9 and Nightly v75.0a1 from 2020-02-28 on Ubuntu 18 with theme Yaru-Dark.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
OS: Unspecified → Linux
Hardware: Unspecified → Desktop
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: