Bug 1617858 [Linux/Gtk] Don't use a fallback widget when it's missing, r=jhorak

With Bug 1613130 fixed we may not need a fallback widget so let's remove this workaround.

Differential Revision: https://phabricator.services.mozilla.com/D64052